--- a/Mejoras/MapaSST_ClickArea.html
+++ b/Mejoras/MapaSST_ClickArea.html
@@ -35,7 +35,7 @@
 // Add a click event with a popup
     polygonCAN.on('click', function(e) {
       var popup = L.popup().setLatLng(e.latlng)
-        .setContent("<center><a href='https://www.oceanografia.es/pedro/research_SST_CAN.html'>Demarcacion Canaria</a></center>") 
+        .setContent("<center><a href='https://www.oceanografia.es/IEOOS/SST/SST_CAN.html'>Demarcacion marina Canaria</a></center>") 
         .openOn(map);});
     var polygonNOR = L.polygon([
     [43.80,-2.04],[43.77,-1.99],[43.73,-1.92],[43.66,-1.86],[43.60,-1.80],[43.50,-1.77],[43.49,-1.77],[43.39,-1.77],[43.39,-1.77],[43.32,-2.04],[43.31,-2.38],[43.39,-2.56],[43.43,-2.74],[43.44,-2.92],[43.37,-3.20],[43.41,-3.34],[43.50,-3.54],[43.47,-3.77],[43.47,-3.90],[43.43,-4.08],[43.40,-4.26],[43.40,-4.36],[43.39,-4.45],[43.40,-4.53],[43.39,-4.57],[43.40,-4.58],[43.40,-4.60],[43.40,-4.61],[43.40,-4.62],[43.40,-4.64],[43.40,-4.66],[43.41,-4.71],[43.44,-4.84],[43.46,-4.94],[43.47,-5.08],[43.52,-5.28],[43.55,-5.48],[43.58,-5.68],[43.61,-5.78],[43.64,-5.87],[43.57,-6.06],[43.57,-6.30],[43.55,-6.53],[43.57,-6.65],[43.56,-6.82],[43.57,-6.92],[43.56,-7.01],[43.55,-7.12],[43.59,-7.27],[43.67,-7.36],[43.71,-7.48],[43.73,-7.55],[43.71,-7.61],[43.76,-7.69],[43.74,-7.77],[43.77,-7.91],[43.69,-8.07],[43.66,-8.10],[43.57,-8.23],[43.48,-8.33],[43.46,-8.29],[43.34,-8.23],[43.34,-8.38],[43.32,-8.53],[43.32,-8.85],[43.23,-8.96],[43.18,-9.18],[43.13,-9.17],[43.08,-9.25],[43.01,-9.27],[42.88,-9.27],[42.93,-9.19],[42.80,-9.15],[42.79,-8.98],[42.69,-9.03],[42.52,-9.04],[42.61,-8.86],[42.59,-8.79],[42.56,-8.88],[42.48,-8.92],[42.39,-8.84],[42.36,-8.75],[42.31,-8.85],[42.28,-8.72],[42.21,-8.78],[41.90,-8.88],[41.85,-9.14],[41.72,-11.26],[41.70,-11.69],[41.55,-12.62],[41.40,-13.29],[41.50,-13.34],[41.73,-13.50],[42.26,-13.72],[42.66,-13.81],[43.16,-13.85],[43.69,-13.79],[44.35,-13.53],[44.72,-13.30],[45.02,-13.05],[45.37,-12.69],[45.73,-12.19],[46.15,-11.41],[46.42,-10.79],[46.63,-10.32],[46.81,-9.82],[46.66,-8.85],[46.02,-6.69],[45.93,-6.37],[45.77,-5.39],[45.39,-4.46],[45.22,-3.60],[45.06,-3.40],[44.89,-3.21],[44.87,-3.17],[44.66,-2.95],[44.50,-2.71],[44.32,-2.52],[44.11,-2.34],[43.80,-2.04],    ]).addTo(map);
@@ -43,7 +43,7 @@
 // Add a click event with a popup
     polygonNOR.on('click', function(e) {
       var popup = L.popup().setLatLng(e.latlng)
-        .setContent("<center><a href='https://www.oceanografia.es/pedro/research_SST_NOR.html'>Demarcacion Noroeste</a></center>") 
+        .setContent("<center><a href='https://www.oceanografia.es/IEOOS/SST/SST_NOR.html'>Demarcacion marina Noratlántica</a></center>") 
         .openOn(map);});
     var polygonSUD = L.polygon([
     [36.18,-5.92],[35.96,-5.92],[35.96,-5.92],[35.96,-5.92],[35.96,-5.92],[35.96,-5.92],[35.96,-5.97],[35.96,-6.04],[35.97,-6.05],[35.97,-6.06],[35.97,-6.08],[35.93,-6.28],[35.91,-6.38],[35.91,-6.40],[35.89,-6.50],[35.89,-6.52],[35.87,-6.65],[35.87,-6.66],[35.83,-6.81],[35.83,-6.82],[35.82,-6.86],[35.81,-6.99],[35.81,-7.00],[35.79,-7.10],[35.77,-7.53],[35.77,-7.53],[35.86,-7.48],[35.86,-7.48],[35.98,-7.42],[36.00,-7.41],[36.03,-7.40],[36.21,-7.34],[36.35,-7.30],[36.40,-7.29],[36.42,-7.29],[36.45,-7.28],[36.46,-7.27],[36.46,-7.27],[36.51,-7.26],[36.51,-7.26],[36.54,-7.27],[36.77,-7.28],[36.77,-7.28],[36.77,-7.29],[36.97,-7.33],[36.97,-7.33],[36.96,-7.40],[37.16,-7.40],[37.17,-7.38],[37.17,-7.38],[37.17,-7.37],[37.17,-7.38],[37.17,-7.37],[37.17,-7.37],[37.17,-7.37],[37.17,-7.37],[37.17,-7.37],[37.17,-7.37],[37.17,-7.37],[37.17,-7.37],[37.17,-7.37],[37.18,-7.35],[37.19,-7.33],[37.19,-7.33],[37.21,-7.16],[37.21,-7.05],[37.17,-6.95],[37.12,-6.84],[37.08,-6.71],[37.02,-6.60],[36.94,-6.48],[36.82,-6.40],[36.77,-6.38],[36.75,-6.42],[36.74,-6.43],[36.75,-6.43],[36.71,-6.44],[36.65,-6.40],[36.62,-6.36],[36.62,-6.35],[36.61,-6.33],[36.62,-6.32],[36.62,-6.30],[36.59,-6.27],[36.58,-6.26],[36.58,-6.24],[36.53,-6.24],[36.51,-6.25],[36.49,-6.21],[36.50,-6.26],[36.51,-6.26],[36.53,-6.28],[36.53,-6.28],[36.54,-6.28],[36.53,-6.31],[36.52,-6.29],[36.47,-6.26],[36.40,-6.22],[36.37,-6.19],[36.32,-6.16],[36.30,-6.15],[36.30,-6.14],[36.29,-6.13],[36.30,-6.14],[36.29,-6.11],[36.26,-6.09],[36.23,-6.07],[36.20,-6.05],[36.18,-6.03],[36.18,-6.00],[36.19,-5.94],[36.19,-5.93],    ]).addTo(map);
@@ -51,7 +51,7 @@
 // Add a click event with a popup
     polygonSUD.on('click', function(e) {
       var popup = L.popup().setLatLng(e.latlng)
-        .setContent("<center><a href='https://www.oceanografia.es/pedro/research_SST_SUD.html'>Demarcacion Suratlántica</a></center>") 
+        .setContent("<center><a href='https://www.oceanografia.es/IEOOS/SST/SST_SUD.html'>Demarcacion marina Sudatlántica</a></center>") 
         .openOn(map);});
     var polygonESA = L.polygon([
     [36.84,-2.34],[36.84,-2.33],[36.83,-2.31],[36.82,-2.29],[36.80,-2.27],[36.78,-2.25],[36.77,-2.23],[36.75,-2.22],[36.74,-2.21],[36.73,-2.20],[36.73,-2.20],[36.73,-2.20],[36.73,-2.20],[36.73,-2.20],[36.73,-2.20],[36.72,-2.19],[36.72,-2.19],[36.71,-2.18],[36.21,-1.71],[35.96,-2.09],[35.94,-2.20],[36.01,-2.50],[36.04,-2.66],[36.05,-2.83],[36.02,-2.80],[35.93,-2.78],[35.87,-2.80],[35.81,-2.84],[35.75,-2.95],[35.74,-2.99],[35.74,-3.05],[35.75,-3.10],[35.76,-3.15],[35.80,-3.21],[35.84,-3.25],[35.89,-3.27],[35.94,-3.28],[36.01,-3.27],[36.06,-3.24],[36.04,-3.30],[35.99,-3.53],[36.00,-3.89],[35.98,-4.02],[35.88,-4.35],[35.87,-4.39],[35.89,-4.51],[35.80,-5.08],[35.82,-5.26],[35.85,-5.31],[35.87,-5.33],[35.87,-5.34],[35.88,-5.33],[35.89,-5.31],[35.89,-5.30],[35.89,-5.29],[35.89,-5.29],[35.90,-5.28],[35.90,-5.28],[35.90,-5.28],[35.90,-5.30],[35.89,-5.32],[35.90,-5.35],[35.92,-5.36],[35.92,-5.37],[35.92,-5.39],[36.00,-5.39],[35.98,-5.44],[35.96,-5.52],[35.96,-5.53],[35.96,-5.54],[35.95,-5.55],[35.94,-5.60],[35.94,-5.65],[35.96,-5.92],[36.18,-5.91],[36.18,-5.91],[36.17,-5.89],[36.10,-5.83],[36.09,-5.78],[36.07,-5.69],[36.04,-5.63],[36.02,-5.61],[36.02,-5.57],[36.02,-5.57],[36.02,-5.56],[36.04,-5.51],[36.05,-5.47],[36.06,-5.44],[36.10,-5.44],[36.15,-5.37],[36.14,-5.34],[36.29,-5.27],[36.31,-5.25],[36.42,-5.18],[36.46,-5.00],[36.50,-4.93],[36.48,-4.74],[36.52,-4.63],[36.58,-4.57],[36.59,-4.53],[36.65,-4.47],[36.71,-4.41],[36.72,-4.38],[36.71,-4.35],[36.71,-4.25],[36.72,-4.15],[36.75,-4.07],[36.74,-3.91],[36.73,-3.77],[36.73,-3.69],[36.72,-3.53],[36.71,-3.39],[36.74,-3.28],[36.75,-3.10],[36.75,-2.91],[36.69,-2.72],[36.82,-2.56],[36.83,-2.48],    ]).addTo(map);
@@ -59,38 +59,5 @@
 // Add a click event with a popup
     polygonESA.on('click', function(e) {
       var popup = L.popup().setLatLng(e.latlng)
-        .setContent("<center><a href='https://www.oceanografia.es/pedro/research_SST_ESA.html'>Demarcacion Estrecho-Alboran</a></center>") 
+        .setContent("<center><a href='https://www.oceanografia.es/IEOOS/SST/SST_ESA.html'>Demarcacion marina Estrecho y Alborán</a></center>") 
         .openOn(map);});
-    var polygonLEV = L.polygon([
-    [36.19,-1.69],[36.21,-1.71],[36.22,-1.71],[36.40,-1.89],[36.53,-2.01],[36.62,-2.09],[36.71,-2.18],[36.72,-2.19],[36.75,-2.11],[36.79,-2.06],[36.85,-2.00],[36.92,-1.96],[36.96,-1.90],[37.18,-1.82],[37.36,-1.66],[37.42,-1.54],[37.47,-1.47],[37.56,-1.34],[37.58,-1.23],[37.54,-1.14],[37.57,-1.10],[37.58,-1.01],[37.58,-0.98],[37.56,-0.93],[37.58,-0.84],[37.60,-0.77],[37.68,-0.73],[37.64,-0.75],[37.79,-0.76],[37.94,-0.71],[38.00,-0.65],[38.21,-0.51],[38.36,-0.45],[38.45,-0.36],[38.51,-0.21],[38.54,-0.07],[38.63, 0.01],[38.66, 0.08],[38.70, 0.16],[38.74, 0.23],[38.80, 0.19],[38.83, 0.15],[38.90,-0.05],[39.04,-0.18],[39.23,-0.25],[39.46,-0.33],[39.67,-0.21],[39.93,-0.00],[39.98, 0.03],[40.12, 0.16],[40.36, 0.40],[40.49, 0.50],[40.66, 0.81],[40.83, 0.74],[40.88, 0.80],[40.92, 0.83],[41.01, 0.94],[41.07, 1.15],[41.09, 1.19],[41.11, 1.23],[41.09, 1.22],[41.12, 1.28],[41.19, 1.59],[41.22, 1.76],[41.25, 1.89],[41.37, 2.19],[41.49, 2.37],[41.61, 2.66],[41.70, 2.88],[41.77, 3.00],[41.83, 3.08],[41.86, 3.17],[41.89, 3.20],[41.96, 3.23],[42.07, 3.21],[42.12, 3.14],[42.25, 3.19],[42.24, 3.26],[42.28, 3.29],[42.31, 3.30],[42.32, 3.32],[42.33, 3.29],[42.33, 3.25],[42.34, 3.20],[42.38, 3.16],[42.43, 3.17],[42.44, 3.17],[42.44, 3.17],[42.44, 3.17],[42.54, 3.48],[42.72, 4.06],[41.86, 5.02],[41.75, 5.11],[41.44, 5.38],[40.60, 6.13],[39.48, 6.26],[38.43, 5.31],[38.21, 4.12],[37.98, 3.19],[37.97, 2.77],[37.64, 1.87],[37.61, 0.78],[37.17, 0.29],[36.92,-0.14],[36.76,-0.52],[36.68,-0.88],[36.28,-1.56],    ]).addTo(map);
-    polygonLEV.setStyle({fillColor: '#ff9999',color: '#ff9999',fillOpacity: 0.5});  
-// Add a click event with a popup
-    polygonLEV.on('click', function(e) {
-      var popup = L.popup().setLatLng(e.latlng)
-        .setContent("<center><a href='https://www.oceanografia.es/pedro/research_SST_LEV.html'>Demarcacion Levante-Baleares</a></center>") 
-        .openOn(map);});
-//Leyenda
-    var legend = L.control({position: 'bottomright'});
-    legend.onAdd = function (map) {
-    function getColor(d) {
-        return d === "Canaria" ? "#bf3eff" :
-               d === "Noroeste" ? "#d57016" :
-               d === "Suratlántica" ? "#61a347" :
-               d === "Estrecho-Alboran" ? "#e28b05" :
-               d === "Levante-Baleares" ? "#ff9999" :
-               "#ff7f00";
-    }    var div = L.DomUtil.create('div', 'info legend');
-    labels = ['<strong>Demarcaciones</strong>'],
-    categories = ['Canaria','Noroeste', 'Suratlántica','Estrecho-Alboran','Levante-Baleares'];
-    for (var i = 0; i < categories.length; i++) {
-            div.innerHTML += 
-            labels.push(
-               '<i class="circle" style="background:' + getColor(categories[i]) + '"></i>' +
-            (categories[i] ? categories[i] : '+'));}
-        div.innerHTML = labels.join('<br>');
-    return div;
-    };
-    legend.addTo(map);
-</script> 
-</body>
-</html>
