Add demarcaciones map

--- a/html/SST_SUD.html
+++ b/html/SST_SUD.html
@@ -19,66 +19,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="Pedro Vélez-Belchí web page" />
-	<script type="application/x-javascript">
- addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
- function hideURLbar(){ window.scrollTo(0,1); }
-</script>
 </head>
 
 <body>
-
-<!--Script to include file-->
-	<script>
-		$(function () {
-			var includes = $('[data-include]');
-			jQuery.each(includes, function () {
-				var file = $(this).data('include') + '.html';
-				$(this).load(file);
-			});
-		});
-	</script>
-<!--//Script to include file-->
-
-<!--Menu-->
-	<div class="header header-top">
-		<div class="container">
-			<div class="logo">
-				<h1><a href="index.html">Pedro <br />Vélez-Belchí</a></h1>
-			</div>
-			<div class="top-nav">
-				<span class="menu"><img src="images/menu.png" alt=""> </span>
-				<ul>
-					<li><a href="index.html" class="hvr-sweep-to-bottom">About me</a> </li>
-					<li class="active"><a href="research.html">Research</a> </li>
-					<li><a href="http://www.argoespana.es" class="hvr-sweep-to-bottom">Argo Spain</a></li>
-					<li><a href="http://www.oceanografia.es/raprocan" class="hvr-sweep-to-bottom">RaProCan</a></li>
-					<li><a href="contactme.html" class="hvr-sweep-to-bottom">Contact me</a></li>
-				</ul>
-				<div class="clearfix"> </div>
-				<!--script-->
-				<script>
-					$("span.menu").click(function () {
-						$(".top-nav ul").slideToggle(500, function () {
-						});
-					});
-				</script>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-<!--//Menu-->
 
 <!--SST-->
 	<div class="container">
 		<div class="blog">
 			<div class="top-blog">
-				<h2>Temperatura superficial del mar en la Demarcacion Levantino Balear</h2>
+				<h2>Temperatura superficial del mar en la Demarcación SudAtlántica</h2>
 			</div>
 			<br>
 			<p>Los datos de temperatura superficial del mar en esta página han sido obtenidos del analisis denominado <a href="https://www.ncdc.noaa.gov/oisst"><i>Optimum Interpolation Sea Surface Temperature</i> que proporciona la oficina Oficina Nacional de la Administración Oceánica y Atmosférica de los Estados Unidos</a> y procesados según este <a href="https://github.com/PedroVelez/SSTGlobalAnalysis"> repositorio</a></p>
 			<br>
 			<div class="top-blog"></div>
-			<a href="images/SST/map_sstd_anom_LEBA.png"><img class="img-responsive" src="images/SST/map_sstd_anom_LEBA.png"
+			<a href="https://www.oceanografia.es/IEOOS/SST/images/map_sstd_anom_SUD.png"><img class="img-responsive" src="https://www.oceanografia.es/IEOOS/SST/images/map_sstd_anom_SUD.png"
 					alt="" /></a>
 			<br><p></p><br>
 
@@ -87,8 +42,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-------->
 				<div class="col-md-6 blog-bottom">
 					<div class=" blog-top">
-						<a href="images/SST/sstd_mean_LEBA.png"><img class="img-responsive"
-								src="images/SST/sstd_mean_LEBA.png" alt="" /></a>
+						<a href="https://www.oceanografia.es/IEOOS/SST/images/sstd_mean_SUD.png"><img class="img-responsive"
+								src="https://www.oceanografia.es/IEOOS/SST/images/sstd_mean_SUD.png" alt="" /></a>
 						<div class="blog-grid">
 							<h3>Temperatura superficial promedio</h3>
 							<p></p>
@@ -100,8 +55,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-------->
 				<div class="col-md-6 blog-bottom">
 					<div class=" blog-top">
-						<a href="images/SST/sstd_anom_mean_LEBA.png"><img class="img-responsive"
-								src="images/SST/sstd_anom_mean_LEBA.png" alt="" /></a>
+						<a href="https://www.oceanografia.es/IEOOS/SST/images/sstd_anom_mean_SUD.png"><img class="img-responsive"
+								src="https://www.oceanografia.es/IEOOS/SST/images/sstd_anom_mean_SUD.png" alt="" /></a>
 						<div class="blog-grid">
 							<h3>Anomalia Temperatura superficial promedio</h3>
 							<p></p>
@@ -113,7 +68,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-------->
 				<div class="col-md-6 blog-bottom">
 					<div class=" blog-top">
-						<a href="images/SST/sstd_LEBA.png"><img class="img-responsive" src="images/SST/sstd_LEBA.png"
+						<a href="https://www.oceanografia.es/IEOOS/SST/images/sstd_SUD.png"><img class="img-responsive" src="https://www.oceanografia.es/IEOOS/SST/images/sstd_SUD.png"
 								alt="" /></a>
 						<div class="blog-grid">
 							<h3>Temperatura superficial promedio</h3>
@@ -126,8 +81,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-------->
 				<div class="col-md-6 blog-bottom">
 					<div class=" blog-top">
-						<a href="images/SST/sstd_anom_LEBA.png"><img class="img-responsive"
-								src="images/SST/sstd_anom_LEBA.png" alt="" /></a>
+						<a href="https://www.oceanografia.es/IEOOS/SST/images/sstd_anom_SUD.png"><img class="img-responsive"
+								src="https://www.oceanografia.es/IEOOS/SST/images/sstd_anom_SUD.png" alt="" /></a>
 						<div class="blog-grid">
 							<h3>Anomalia temperatura superficial promedio del Océano</h3>
 							<p> La línea azul oscuro corresponde a la evolución temporal de la temperatura superficial para el año en curso, mientras que las demás lineas corresponden a los 5 años previos. La linea de color gris oscuro es el promedio en el periodo de referencia, y la franja gris claro corresponde a 1.5 desviaciones standart.</p>
@@ -152,9 +107,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-
-	<div data-include="address"></div>
-	<div data-include="footer"></div>
 
 </body>
 
