--- a/Mejoras/MapaSST_ClickArea.html
+++ b/Mejoras/MapaSST_ClickArea.html
@@ -18,7 +18,7 @@
 <body> 
     <div align="center">
         Temperatura superficial del mar en las demarcaciones Españolas.<br/>
-         Actualizado el 27-Sep-2024 .<br/>
+         Actualizado el 28-Sep-2024 .<br/>
         <div id="map" style="width: 700px; height: 650px;"></div> 
     </div>
 <script type="text/javascript">
@@ -61,3 +61,36 @@
       var popup = L.popup().setLatLng(e.latlng)
         .setContent("<center><a href='https://www.oceanografia.es/IEOOS/SST/SST_ESA.html'>Demarcacion marina Estrecho y Alborán</a></center>") 
         .openOn(map);});
+    var polygonLEB = L.polygon([
+    [36.19,-1.69],[36.21,-1.71],[36.22,-1.71],[36.40,-1.89],[36.53,-2.01],[36.62,-2.09],[36.71,-2.18],[36.72,-2.19],[36.75,-2.11],[36.79,-2.06],[36.85,-2.00],[36.92,-1.96],[36.96,-1.90],[37.18,-1.82],[37.36,-1.66],[37.42,-1.54],[37.47,-1.47],[37.56,-1.34],[37.58,-1.23],[37.54,-1.14],[37.57,-1.10],[37.58,-1.01],[37.58,-0.98],[37.56,-0.93],[37.58,-0.84],[37.60,-0.77],[37.68,-0.73],[37.64,-0.75],[37.79,-0.76],[37.94,-0.71],[38.00,-0.65],[38.21,-0.51],[38.36,-0.45],[38.45,-0.36],[38.51,-0.21],[38.54,-0.07],[38.63, 0.01],[38.66, 0.08],[38.70, 0.16],[38.74, 0.23],[38.80, 0.19],[38.83, 0.15],[38.90,-0.05],[39.04,-0.18],[39.23,-0.25],[39.46,-0.33],[39.67,-0.21],[39.93,-0.00],[39.98, 0.03],[40.12, 0.16],[40.36, 0.40],[40.49, 0.50],[40.66, 0.81],[40.83, 0.74],[40.88, 0.80],[40.92, 0.83],[41.01, 0.94],[41.07, 1.15],[41.09, 1.19],[41.11, 1.23],[41.09, 1.22],[41.12, 1.28],[41.19, 1.59],[41.22, 1.76],[41.25, 1.89],[41.37, 2.19],[41.49, 2.37],[41.61, 2.66],[41.70, 2.88],[41.77, 3.00],[41.83, 3.08],[41.86, 3.17],[41.89, 3.20],[41.96, 3.23],[42.07, 3.21],[42.12, 3.14],[42.25, 3.19],[42.24, 3.26],[42.28, 3.29],[42.31, 3.30],[42.32, 3.32],[42.33, 3.29],[42.33, 3.25],[42.34, 3.20],[42.38, 3.16],[42.43, 3.17],[42.44, 3.17],[42.44, 3.17],[42.44, 3.17],[42.54, 3.48],[42.72, 4.06],[41.86, 5.02],[41.75, 5.11],[41.44, 5.38],[40.60, 6.13],[39.48, 6.26],[38.43, 5.31],[38.21, 4.12],[37.98, 3.19],[37.97, 2.77],[37.64, 1.87],[37.61, 0.78],[37.17, 0.29],[36.92,-0.14],[36.76,-0.52],[36.68,-0.88],[36.28,-1.56],    ]).addTo(map);
+    polygonLEB.setStyle({fillColor: '#ff9999',color: '#ff9999',fillOpacity: 0.5});  
+// Add a click event with a popup
+    polygonLEB.on('click', function(e) {
+      var popup = L.popup().setLatLng(e.latlng)
+        .setContent("<center><a href='https://www.oceanografia.es/IEOOS/SST/SST_LEB.html'>Demarcacion marina Levantino-Balear</a></center>") 
+        .openOn(map);});
+//Leyenda
+    var legend = L.control({position: 'bottomright'});
+    legend.onAdd = function (map) {
+    function getColor(d) {
+        return d === "Canaria" ? "#bf3eff" :
+               d === "Noratlántica" ? "#d57016" :
+               d === "Sudatlántica" ? "#61a347" :
+               d === "Estrecho y Alborán" ? "#e28b05" :
+               d === "Levantino-Balear" ? "#ff9999" :
+               "#ff7f00";
+    }    var div = L.DomUtil.create('div', 'info legend');
+    labels = ['<strong>Demarcaciones</strong>'],
+    categories = ['Canaria','Noratlántica', 'Sudatlántica','Estrecho y Alborán','Levantino-Balear'];
+    for (var i = 0; i < categories.length; i++) {
+            div.innerHTML += 
+            labels.push(
+               '<i class="circle" style="background:' + getColor(categories[i]) + '"></i>' +
+            (categories[i] ? categories[i] : '+'));}
+        div.innerHTML = labels.join('<br>');
+    return div;
+    };
+    legend.addTo(map);
+</script> 
+</body>
+</html>
